# weirdark

./: .gitignore  Cargo.toml  README.md  savegame.json
.github/ISSUE_TEMPLATE/: feature-template.md  system-template.md
raws/: spawns.json
resources/: MxPlus_HP_100LX_16x12.png~
src/: camera.rs  colors.rs  gui.rs  lighting_system.rs  main.rs  menu.rs  player.rs  rng.rs  save_load_system.rs  spawner.rs  states.rs  visibility_system.rs
src/entities/: atmospherics.rs  biology.rs  components.rs  intents.rs  mod.rs  power_components.rs  props.rs
src/graphics/: components.rs  mod.rs
src/map/: components.rs  mod.rs  pathfinding.rs  tile_blueprints.rs
src/map_builders/: common.rs  empty_plain.rs  mod.rs  room_build_tester.rs  small_cargo_ship.rs  system_test_map.rs
src/systems/: atmosphere_system.rs  biology_system.rs  event_system.rs  interaction_system.rs  lighting_system.rs  map_index_system.rs  mod.rs  power_system.rs  state_align_system.rs  visibility_system.rs
src/systems/dispatcher/: mod.rs  multi_thread.rs  single_thread.rs
src/vectors/: mod.rs  utils.rs
